--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,5 @@
     <string name="retry">Retry</string>
     <string name="sms_disabled">SMS usage disabled</string>
     <string name="granted_permission">Permission Granted</string>
-    <string name="sms">הודעת sms</string>
+    <string name="sms">הודעת שידור </string>
 </resources>
